k8s/07-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbnb-ui
  namespace: airbnb-mlops
spec:
  selector:
    app: airbnb-ui
  ports:
    - port: 80
      targetPort: 8501
